fix #1103 : mat icon overflow issue on tabs

--- a/dashboard/src/app/modules/campaign/components/campaign-form/step-2/filters-form.component.scss
+++ b/dashboard/src/app/modules/campaign/components/campaign-form/step-2/filters-form.component.scss
@@ -79,3 +79,7 @@
     }
   }
 }
+
+.mat-icon {
+  overflow: hidden;
+}
